--- a/mealie/values.yaml
+++ b/mealie/values.yaml
@@ -1,5 +1,5 @@
 namespace: mealie
-replicaCount: 1
+replicaCount: 2
 
 
 image:
@@ -8,15 +8,28 @@ image:
   pullPolicy: IfNotPresent
 
 service:
-  type: NodePort
+  type: ClusterIP
   port: 9000
-  nodePort: 30900
+  targetPort: 30900
 
 persistence:
   enabled: true
   storageClass: ""
   accessMode: ReadWriteOnce
   size: 500Mi
+
+
+ingress:
+  enabled: true
+  className: traefik
+  annotations: {}
+  hosts:
+    - host: mealie.local
+      paths:
+        - path: /
+          pathType: Prefix
+  tls: []
+
 
 resoures: {}
 
